Fix situation sentence

--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
                 </div> -->
             </div>
             <div class="header-situation__container" data-aos="fade-in">
-                <h3 class="header-situation__label">Jeune développeur Quimperois de 33 ans à la recherche de stage dans
+                <h3 class="header-situation__label">Jeune développeur Quimperois de 33 ans à la recherche d'un stage de 2 à 6 mois dans
                     le finistère</h3>
             </div>
         </header>
